# nputop

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nputop/: cli.py  ioctl.py
